--- a/src/components/NewArticle/NewArticle.scss
+++ b/src/components/NewArticle/NewArticle.scss
@@ -18,7 +18,6 @@ input[type="file"]{
     display: none;
 }
 
-
 .add{
     cursor: pointer;
     margin-left: 20px;
@@ -65,13 +64,12 @@ button:disabled{
     flex-direction: column;
     align-items: center;
     justify-content: center;
-}
-.message img{
-    margin-bottom: 30px;
-}
-
-.message span{    
-    text-align: center;
-    color: red;
-    font-size: 28px;
+    img{
+        margin-bottom: 30px;
+    }
+    span{    
+        text-align: center;
+        color: red;
+        font-size: 28px;
+    }
 }
